Setting up demo assembly and HCDs

--- a/demo-deploy/src/main/resources/DemoContainer.conf
+++ b/demo-deploy/src/main/resources/DemoContainer.conf
@@ -1,5 +1,5 @@
 name = "DemoContainer"
-components: [
+components = [
   {
     name = "DemoAssembly"
     componentType = assembly
@@ -8,17 +8,29 @@ components: [
     locationServiceUsage = RegisterAndTrackServices
     connections = [
       {
-        name: "DemoHcd"
+        name: "FilterHcd"
+        componentType: hcd
+        connectionType: akka
+      }
+      {
+        name: "DisperserHcd"
         componentType: hcd
         connectionType: akka
       }
     ]
-  },
+  }
   {
-    name = "DemoHcd"
+    name = "FilterHcd"
     componentType = hcd
-    behaviorFactoryClassName = "org.tmt.test.demohcd.DemoHcdBehaviorFactory"
-    prefix = "test.demohcd"
+    behaviorFactoryClassName = "org.tmt.test.demohcd.FilterHcdBehaviorFactory"
+    prefix = "test.filterhcd"
+    locationServiceUsage = RegisterOnly
+  }
+  {
+    name = "DisperserHcd"
+    componentType = hcd
+    behaviorFactoryClassName = "org.tmt.test.demohcd.DisperserHcdBehaviorFactory"
+    prefix = "test.disperserhcd"
     locationServiceUsage = RegisterOnly
   }
 ]
