--- a/demo-deploy/src/main/resources/DemoHcdStandalone.conf
+++ b/demo-deploy/src/main/resources/DemoHcdStandalone.conf
@@ -1,5 +1,5 @@
-name = "DemoHcd"
-componentType = hcd
-behaviorFactoryClassName = "org.tmt.test.demohcd.DemoHcdBehaviorFactory"
-prefix = "test.demohcd"
-locationServiceUsage = RegisterOnly
+//name = "DemoHcd"
+//componentType = hcd
+//behaviorFactoryClassName = "org.tmt.test.demohcd.FilterHcdBehaviorFactory"
+//prefix = "test.demohcd"
+//locationServiceUsage = RegisterOnly
