--- a/demo-deploy/src/main/resources/JDemoHcdStandalone.conf
+++ b/demo-deploy/src/main/resources/JDemoHcdStandalone.conf
@@ -1,5 +1,5 @@
-name = "JDemoHcd"
-componentType = hcd
-behaviorFactoryClassName = "org.tmt.test.demohcd.JDemoHcdBehaviorFactory"
-prefix = "test.demohcd"
-locationServiceUsage = RegisterOnly
+//name = "JDemoHcd"
+//componentType = hcd
+//behaviorFactoryClassName = "org.tmt.test.demohcd.JDemoHcdBehaviorFactory"
+//prefix = "test.demohcd"
+//locationServiceUsage = RegisterOnly
