--- a/demo-deploy/src/main/resources/application.conf
+++ b/demo-deploy/src/main/resources/application.conf
@@ -6,10 +6,11 @@ csw-logging {
 
   # Log level for each component
   component-log-levels {
-    DemoHcd = info
+    FilterHcd = info
+    DisperserHcd = info
     DemoAssembly = info
-    JDemoHcd = info
-    JDemoAssembly = info
+//    JDemoHcd = info
+//    JDemoAssembly = info
   }
 
   # Default Log level for logger API (overridden by component log levels)
