Test subscribe to events

--- a/demo-deploy/src/main/resources/DemoContainer.conf
+++ b/demo-deploy/src/main/resources/DemoContainer.conf
@@ -4,7 +4,7 @@ components = [
     name = "DemoAssembly"
     componentType = assembly
     behaviorFactoryClassName = "org.tmt.test.demoassembly.DemoAssemblyBehaviorFactory"
-    prefix = "test.demo"
+    prefix = "TEST.DemoAssembly"
     locationServiceUsage = RegisterAndTrackServices
     connections = [
       {
@@ -23,14 +23,14 @@ components = [
     name = "FilterHcd"
     componentType = hcd
     behaviorFactoryClassName = "org.tmt.test.demohcd.FilterHcdBehaviorFactory"
-    prefix = "test.filterhcd"
+    prefix = "TEST.FilterHcd"
     locationServiceUsage = RegisterOnly
   }
   {
     name = "DisperserHcd"
     componentType = hcd
     behaviorFactoryClassName = "org.tmt.test.demohcd.DisperserHcdBehaviorFactory"
-    prefix = "test.disperserhcd"
+    prefix = "TEST.DisperserHcd"
     locationServiceUsage = RegisterOnly
   }
 ]
